[package]
name = "sushanshan"
version = "0.1.0"
authors = ["henzai <ry0chord@gmail.com>"]
edition = "2018"

[dependencies]
ed25519-compact = "0.1.9"
hex = "0.4.3"
http = "0.2.4"
hyper = { version = "0.14.14", features = ["full"] }
url = { version = "2", features = ["serde"] }
getrandom = { version = "0.2", features = ["js"] }
serde =  { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
serde_repr = "0.1.7"
tokio = { version = "1.12.0", features = ["full"] }
axum = "0.4.4"
